--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -18,7 +18,7 @@ body {
     scroll-behavior: smooth;
 }
 section {
-    scroll-margin-block-start: 30px;
+    scroll-margin-top: 100px;
 }
 
 #typed-output::before {
@@ -37,4 +37,10 @@ section {
     width: 100%;
     height: auto;
     transform: translate3d(0, 0, 0);
+}
+
+header.scrolled {
+    position: fixed;
+    background-color: black;
+    color: white;
 }
